force-app/main/default/objects/nFORCE__Route_Group__c/nFORCE__Route_Group__c.object-meta.xml
<CustomObject>
    <label>Route Group</label>
    <nameField>
        <displayFormat>{0000}</displayFormat>
        <label>Route Group Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Route Groups</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>