force-app/main/default/objects/nFORCE__Route_Group__c/fields/nFORCE__Conditional_Display_Criteria__c.field-meta.xml
<CustomField>
    <fullName>nFORCE__Conditional_Display_Criteria__c</fullName>
    <defaultValue>&quot;&quot;</defaultValue>
    <description>This field is manually populated. It is optional. This field uses a Forms Lite expression to specify criteria that must be met for this route to become visible to the user.</description>
    <inlineHelpText>A forms lite expression used to determine the visility of a route within the display.</inlineHelpText>
    <label>Conditional Display Criteria</label>
    <length>2048</length>
    <type>LongTextArea</type>
</CustomField>