force-app/main/default/objects/nFORCE__Route_Group__c/fields/nFORCE__Order__c.field-meta.xml
<CustomField>
    <fullName>nFORCE__Order__c</fullName>
    <description>This field is manually populated. It is required. This field specifies the order a route appears on the left navigation or subnavigation bar.</description>
    <inlineHelpText>The route display order.</inlineHelpText>
    <label>Order</label>
    <precision>9</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>