force-app/main/default/objects/nFORCE__Route_Group__c/fields/nFORCE__Parent_Route__c.field-meta.xml
<CustomField>
    <fullName>nFORCE__Parent_Route__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This field is manually populated. It is optional. This field specifies the parent route a route is being linked to. If a route has a parent route, it will display in the subnavigation bar for that route. If a parent route is not defined, it will display in the left navigation bar.</description>
    <inlineHelpText>The parent route record for this junction.</inlineHelpText>
    <label>Parent Route</label>
    <referenceTo>nFORCE__Route__c</referenceTo>
    <relationshipLabel>Child Route Groups</relationshipLabel>
    <relationshipName>Parent_Route_Groups</relationshipName>
    <type>Lookup</type>
</CustomField>