force-app/main/default/objects/nFORCE__Route_Group__c/fields/nFORCE__Question_Group__c.field-meta.xml
<CustomField>
    <fullName>nFORCE__Question_Group__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This field is manually populated. It is optional. This field specifies a group that is comprised only of questions.</description>
    <label>Question Group</label>
    <referenceTo>nFORCE__Group__c</referenceTo>
    <relationshipLabel>Route Groups (Question Group)</relationshipLabel>
    <relationshipName>Question_Group</relationshipName>
    <type>Lookup</type>
</CustomField>