force-app/main/default/objects/nFORCE__Route_Group__c/fields/nPortal__Is_Portal_Enabled__c.field-meta.xml
<CustomField>
    <fullName>nPortal__Is_Portal_Enabled__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates if the Route Group should be automatically shared with Customer Portal Users.</description>
    <inlineHelpText>Check this field if this Route Group and associated records should be shared with Customer Portal Users.</inlineHelpText>
    <label>Is Portal Enabled</label>
    <type>Checkbox</type>
</CustomField>