force-app/main/default/objects/nFORCE__Route_Group__c/fields/nPortal__OA_Auto_Decision_Required__c.field-meta.xml
<CustomField>
    <fullName>nPortal__OA_Auto_Decision_Required__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Administrators populate this boolean field to indicate that Auto Decision needs to be run on the assigned route or route group.</description>
    <inlineHelpText>Select this field to run Auto Decision on the route or route group.</inlineHelpText>
    <label>OA Auto Decision Required</label>
    <type>Checkbox</type>
</CustomField>