force-app/main/default/objects/nFORCE__Route_Group__c/fields/Route_App_Name__c.field-meta.xml
<CustomField>
    <fullName>Route_App_Name__c</fullName>
    <formula>nFORCE__Route__r.nFORCE__App__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>This is a custom formula field that indicates the corresponding App Name for the Roue.</inlineHelpText>
    <label>Route -  App Name</label>
    <type>Text</type>
</CustomField>