force-app/main/default/objects/nFORCE__Route_Group__c/fields/Route_Screen__c.field-meta.xml
<CustomField>
    <fullName>Route_Screen__c</fullName>
    <formula>HYPERLINK(&quot;/&quot;&amp;nFORCE__Route__r.nFORCE__Screen__r.Id, nFORCE__Route__r.nFORCE__Screen__r.Name)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Route Screen</label>
    <type>Text</type>
</CustomField>