force-app/main/default/objects/nFORCE__Route_Group__c/listViews/nFORCE__All.listView-meta.xml
<ListView>
    <fullName>nFORCE__All</fullName>
    <columns>NAME</columns>
    <columns>nFORCE__Group__c</columns>
    <columns>nFORCE__Parent_Route__c</columns>
    <columns>nFORCE__Route__c</columns>
    <columns>nFORCE__lookupKey__c</columns>
    <columns>Route_App_Name__c</columns>
    <columns>Route_Screen__c</columns>
    <columns>nFORCE__Order__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>